// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleMain should render a news article correctly 1`] = `
Array [
  <noscript>
    <img
      alt=""
      height="1px"
      src="undefineds=598286&s2=64&p=news.articles.c0000000001o.page&r=0x0x24x24&re=1024x768&hl=17x7x9&lng=en-US&x1=[urn:bbc:optimo:c0000000001o]&x2=[responsive]&x3=[news]&x4=[en-gb]&x5=[http://localhost/]&x7=[article]&x9=[Article+Headline+for+SEO]&x11=[2018-01-01T12:01:00.000Z]&x12=[2018-01-01T13:00:00.000Z]&x13=[Royal+Wedding+2018~Duchess+of+Sussex]&x14=[2351f2b2-ce36-4f44-996d-c3c4f7f90eaa~803eaeb9-c0c3-4f1b-9a66-90efac3df2dc]"
      style={
        Object {
          "position": "absolute",
        }
      }
      width="1px"
    />
  </noscript>,
  .c2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c3 {
  grid-column: 1 / span 6;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<main
    role="main"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <h1
          className="c2"
          id="content"
        >
          Article Headline
        </h1>
      </div>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          A paragraph.
        </p>
      </div>
    </div>
  </main>,
]
`;

exports[`ArticleMain should render a persian article correctly 1`] = `
Array [
  <noscript>
    <img
      alt=""
      height="1px"
      src="undefineds=598343&s2=64&p=news.articles.c4vlle3q337o.page&r=0x0x24x24&re=1024x768&hl=17x7x9&lng=en-US&x1=[urn:bbc:optimo:c4vlle3q337o]&x2=[responsive]&x3=[news]&x4=[fa]&x5=[http://localhost/]&x7=[article]&x9=[سرصفحه+مقاله]&x11=[2018-01-01T12:01:00.000Z]&x12=[2018-01-01T13:00:00.000Z]"
      style={
        Object {
          "position": "absolute",
        }
      }
      width="1px"
    />
  </noscript>,
  .c2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c3 {
  grid-column: 1 / span 6;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<main
    role="main"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <h1
          className="c2"
          id="content"
        >
          سرصفحه مقاله
        </h1>
      </div>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          یک پاراگراف.
        </p>
      </div>
    </div>
  </main>,
]
`;

exports[`ArticleMain should render a pidgin article correctly (with navigation) 1`] = `
Array [
  <noscript>
    <img
      alt=""
      height="1px"
      src="undefineds=598343&s2=64&p=news.articles.cwl08rd38l6o.page&r=0x0x24x24&re=1024x768&hl=17x7x9&lng=en-US&x1=[urn:bbc:optimo:cwl08rd38l6o]&x2=[responsive]&x3=[news]&x4=[pcm]&x5=[http://localhost/]&x7=[article]&x9=[Article+Headline+for+SEO+in+Pidgin]&x11=[2018-01-01T12:01:00.000Z]&x12=[2018-01-01T13:00:00.000Z]"
      style={
        Object {
          "position": "absolute",
        }
      }
      width="1px"
    />
  </noscript>,
  .c2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c3 {
  grid-column: 1 / span 6;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<main
    role="main"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <h1
          className="c2"
          id="content"
        >
          Article Headline in Pidgin
        </h1>
      </div>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          A paragraph in Pidgin.
        </p>
      </div>
    </div>
  </main>,
]
`;
